--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src *; style-src 'self' http://* 'unsafe-inline';
+          script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>AWSDeployExample</title>
